# SensorViz

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: simple.frag  simple.vert
src/: glad.c  main.cpp  test_simple.cpp
